improve resource folder workflow (copy to output folder)

--- a/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
+++ b/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,11 +6,14 @@
     <RootNamespace>Raylib_CsLo.Examples</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <RunWorkingDirectory>$(MSBuildThisFileDirectory)</RunWorkingDirectory>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Raylib-CsLo\Raylib-CsLo.csproj" />
   </ItemGroup>
-
+    <ItemGroup>
+        <Content Include="resources\**">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
