add more core examples

--- a/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
+++ b/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Raylib_CsLo.Examples</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
