--- a/Raylib-CsLo/Raylib-CsLo.csproj
+++ b/Raylib-CsLo/Raylib-CsLo.csproj
@@ -1,68 +1,70 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<RootNamespace>Raylib_CsLo</RootNamespace>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-		<Version>4.0.0-alpha.2</Version>
-		<Authors>Novaleaf</Authors>
-		<Company>NotNotTech</Company>
-		<Description>
-LowLevel autogen bindings to Raylib 4.0 and convenience wrappers on top.
--    Requires use of `unsafe`
--    Requires `net6.0`
--    A focus on performance. No runtime allocations if at all possible.
--    Because these are autogen, there won't be any intellisense docs. read the raylib cheatsheet for docs
-		</Description>
-		<PackageProjectUrl>https://github.com/NotNotTech/Raylib-CsLo</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/NotNotTech/Raylib-CsLo</RepositoryUrl>
-		<PackageIcon>raylib-cslo_128x128.png</PackageIcon>
-		<PackageReadmeFile>README.md</PackageReadmeFile>
-		<PackageTags>raylib;gamedev;binding;NotNot;rendering;3d;graphics;opengl;</PackageTags>
-		<PackageReleaseNotes>Alpha release.  It works, but check the examples on github.</PackageReleaseNotes>
-		<PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
-		<AssemblyVersion>0.0.0.*</AssemblyVersion>
-		<Copyright>(C) NotNotTech and Contribs</Copyright>
-		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-				
-	</PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <!--<EnablePreviewFeatures>True</EnablePreviewFeatures>-->
+        <!--<LangVersion>Preview</LangVersion>-->
+        <RootNamespace>Raylib_CsLo</RootNamespace>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <Version>4.0.0-alpha.2</Version>
+        <Authors>Novaleaf</Authors>
+        <Company>NotNotTech</Company>
+        <Description>
+            LowLevel autogen bindings to Raylib 4.0 and convenience wrappers on top.
+            -    Requires use of `unsafe`
+            -    Requires `net6.0`
+            -    A focus on performance. No runtime allocations if at all possible.
+            -    Because these are autogen, there won't be any intellisense docs. read the raylib cheatsheet for docs
+        </Description>
+        <PackageProjectUrl>https://github.com/NotNotTech/Raylib-CsLo</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/NotNotTech/Raylib-CsLo</RepositoryUrl>
+        <PackageIcon>raylib-cslo_128x128.png</PackageIcon>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageTags>raylib;gamedev;binding;NotNot;rendering;3d;graphics;opengl;</PackageTags>
+        <PackageReleaseNotes>Alpha release.  It works, but check the examples on github.</PackageReleaseNotes>
+        <PackageLicenseExpression>LGPL-2.1-or-later</PackageLicenseExpression>
+        <AssemblyVersion>0.0.0.*</AssemblyVersion>
+        <Copyright>(C) NotNotTech and Contribs</Copyright>
+        <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-	  <Deterministic>False</Deterministic>
-	</PropertyGroup>
+    </PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-	  <Deterministic>False</Deterministic>
-	</PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <Deterministic>False</Deterministic>
+    </PropertyGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <Deterministic>False</Deterministic>
+    </PropertyGroup>
 
 
 
 
-	<ItemGroup>
-		<None Include="..\meta\logos\raylib-cslo_128x128.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-		<None Include="..\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-	</ItemGroup>
+    <ItemGroup>
+        <None Include="..\meta\logos\raylib-cslo_128x128.png">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.1" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.1" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<Content Include="raylib.dll">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-			<Pack>true</Pack>
-			<PackagePath>lib\net6.0</PackagePath>
-		</Content>
-	</ItemGroup>
+    <ItemGroup>
+        <Content Include="raylib.dll">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <Pack>true</Pack>
+            <PackagePath>lib\net6.0</PackagePath>
+        </Content>
+    </ItemGroup>
 
 </Project>
