add some shader examples and their related bindings

--- a/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
+++ b/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
@@ -17,4 +17,7 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Text\" />
+    </ItemGroup>
 </Project>
