checkin for beta release (shader examples and minor wrapper additions)

--- a/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
+++ b/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
@@ -9,6 +9,14 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants)TRACE;PLATFORM_DESKTOP</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants)TRACE;PLATFORM_DESKTOP</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Raylib-CsLo\Raylib-CsLo.csproj" />
   </ItemGroup>
