--- a/Raylib-CsLo/Raylib-CsLo.csproj
+++ b/Raylib-CsLo/Raylib-CsLo.csproj
@@ -69,7 +69,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.1" />
+        <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="7.1.2" />
     </ItemGroup>
 
     <ItemGroup>
@@ -117,6 +117,21 @@
       <Content Include="raylib.dll">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>        
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="wasm.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>wasm.md</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="wasm.md">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>wasm.Designer.cs</LastGenOutput>
+      </None>
     </ItemGroup>
 
 </Project>
