--- a/binding-gen/.editorconfig
+++ b/binding-gen/.editorconfig
@@ -4,3 +4,4 @@ root = true
 dotnet_diagnostic.IDE1006.severity = none
 dotnet_diagnostic.IDE0054.severity = none
 dotnet_diagnostic.IDE0059.severity = none
+dotnet_diagnostic.IDE0090.severity = none
