Add ref Image instead of Image*

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,31 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/Raylib-CsLo.Codegen/Raylib-CsLo.Codegen.csproj"
+                "${workspaceFolder}/Playground/Playground.csproj"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "build",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "build",
+                "${workspaceFolder}/Playground/Playground.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "publish",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/Playground/Playground.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
             ],
             "problemMatcher": "$msCompile"
         }
