--- a/Raylib-CsLo.Tests/Raylib-CsLo.Tests.csproj
+++ b/Raylib-CsLo.Tests/Raylib-CsLo.Tests.csproj
@@ -11,11 +11,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="xunit" Version="2.4.2-pre.12" />
+        <ProjectReference Include="..\Raylib-CsLo\Raylib-CsLo.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Raylib-CsLo\Raylib-CsLo.csproj" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211130-02" />
+        <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
+        <PackageReference Include="coverlet.collector" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
