--- a/Raylib-CsLo/Raylib-CsLo.csproj
+++ b/Raylib-CsLo/Raylib-CsLo.csproj
@@ -40,17 +40,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="Icon.png">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Include="..\README.md">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <Content Include="runtimes\win-x64\native\raylib.dll">
+        <!-- <Content Include="runtimes\win-x64\native\raylib.dll">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             <TargetPath>raylib.dll</TargetPath>
+        </Content> -->
+        <Content Include="runtimes/linux-x64/native/libraylib.so">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <TargetPath>raylib.so</TargetPath>
+        </Content>
+
+        <Content Include="runtimes/linux-x64/native/libraygui.so">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <TargetPath>raygui.so</TargetPath>
         </Content>
     </ItemGroup>
 
