--- a/sub-modules/raylib-with-extras/raylib-with-extras.vcxproj
+++ b/sub-modules/raylib-with-extras/raylib-with-extras.vcxproj
@@ -96,7 +96,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\extras;..\raylib\src\external\glfw\include;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -114,7 +114,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>DEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;BUILD_LIBTYPE_SHARED;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\extras;..\raylib\src\external\glfw\include;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -131,7 +131,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\extras;..\raylib\src\external\glfw\include;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -153,7 +153,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;PLATFORM_DESKTOP;GRAPHICS_API_OPENGL_33;BUILD_LIBTYPE_SHARED;_WINSOCK_DEPRECATED_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;_WIN32;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\extras;..\raylib\src\external\glfw\include;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\raylib\src;..\raylib\src\external\glfw\include;..\raylib-extra-shims\src;..\physac\src;..\raygui\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -170,12 +170,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\physac\src\physac.h" />
+    <ClInclude Include="..\raygui\src\raygui.h" />
     <ClInclude Include="..\raylib\src\config.h" />
-    <ClInclude Include="..\raylib\src\extras\easings.h" />
-    <ClInclude Include="..\raylib\src\extras\physac.h" />
-    <ClInclude Include="..\raylib\src\extras\raygui.h" />
-    <ClInclude Include="..\raylib\src\extras\rmem.h" />
-    <ClInclude Include="..\raylib\src\raudio.h" />
     <ClInclude Include="..\raylib\src\raylib.h" />
     <ClInclude Include="..\raylib\src\raymath.h" />
     <ClInclude Include="..\raylib\src\rcamera.h" />
@@ -184,6 +181,8 @@
     <ClInclude Include="..\raylib\src\utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\raylib-extra-shims\src\physac.c" />
+    <ClCompile Include="..\raylib-extra-shims\src\raygui.c" />
     <ClCompile Include="..\raylib\src\raudio.c" />
     <ClCompile Include="..\raylib\src\rcore.c" />
     <ClCompile Include="..\raylib\src\rglfw.c" />
@@ -192,8 +191,6 @@
     <ClCompile Include="..\raylib\src\rtext.c" />
     <ClCompile Include="..\raylib\src\rtextures.c" />
     <ClCompile Include="..\raylib\src\utils.c" />
-    <ClCompile Include="src\physac.c" />
-    <ClCompile Include="src\raygui.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
