improve regen script and use latest raylib 4.2 commit

--- a/Raylib-CsLo/Raylib-CsLo.csproj
+++ b/Raylib-CsLo/Raylib-CsLo.csproj
@@ -114,8 +114,15 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Remove="raylib.pdb" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Content Include="raylib.dll">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>        
+      </Content>
+      <Content Include="raylib.pdb">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
 
