--- a/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
+++ b/Raylib-CsLo.Examples/Raylib-CsLo.Examples.csproj
@@ -25,4 +25,7 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
     </ItemGroup>
+    <ItemGroup>
+      <None Remove="resources\shaders\cubes-panning.fs" />
+    </ItemGroup>
 </Project>
